--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-icons": "^4.3.1",
     "react-redux": "^8.0.0",
     "react-toastify": "^8.2.0",
-    "redux": "^4.1.2"
+    "redux": "^4.1.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.4",
